<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.michael.testapptwo.MainActivity">

    <include layout="@layout/content_main" />



    <Button
        android:id="@+id/Bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:visibility="invisible"
        android:text="@string/bt_1"/>
        <!--android:onClick="sendToServer"-->

    <Button
        android:id="@+id/ServerConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|"
        android:text="@string/please_click_to_connect"/>

    <Button
        android:id="@+id/ServerDisconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:text="@string/please_click_to_disconnect"
        android:visibility="invisible"/>
        <!--android:onClick="sendNewMessage"-->
    <Button
        android:id="@+id/Tiny"
        android:layout_height="20dp"
        android:layout_width="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:width="10dp"
        android:height="10dp"
        android:visibility="invisible"
        android:text="@string/_1"/>

    <Button
        android:id="@+id/Small"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="100dp"
        android:width="10dp"
        android:height="10dp"
        android:visibility="invisible"
        android:text="@string/_2"/>
    <Button
        android:id="@+id/Medium"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="100dp"
        android:width="10dp"
        android:height="10dp"
        android:visibility="invisible"
        android:text="@string/_3"/>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


</android.support.design.widget.CoordinatorLayout>
